2011-06-10  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/utils.jl: removed (funcs now in rep.util.misc)

	* lisp/sawfish/cfg/layout.jl
	* lisp/sawfish/cfg/widgets/command.jl
	* lisp/sawfish/cfg/widgets/keymaps.jl
	* lisp/sawfish/cfg/widgets/match-windows.jl: updated for above change

2011-06-04  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in: bump minimum librep to 0.92.1, new funcs required by
	SawfishConfig

2011-06-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/mousetrap.jl: added defvars to be able to
	adjust the mousetrap keybindings. Set a timer of one second to
	properly block edge-actions after mousetrapping

	* lisp/sawfish/gtk/widgets/image.jl: due two fixes in rep-gtk it's possible
	now to set the filename in GtkFileChooserButton, so the GtkEntry is
	removed

	* configure.in: bump minimum GTK+ to 2.24, GDK to 2.23

	* lisp/sawfish/gtk/widget.jl: port 'choice, 'symbol and 'frame-style widgets
	to GtkComboBoxText


2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/mousetrap.jl: added mousetrapping feature,
	original module by Fernando Carmona Varo, modified by me

2011-05-29  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/wallpaper.jl: added option to pass extra
	arguements to wallpaper-setter. Place widget-text to the left

	* lisp/sawfish/gtk/widgets/image.jl
	* lisp/sawfish/gtk/widgets/file.jl: better widget-layout

	* lisp/sawfish/gtk/widgets/font.jl.in: ported 'font widget to
	gtk-font-button (rather than ancient gtk-font-selection-dialog) and
	removed the entry and hbox widgets.

2011-05-28  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/file.jl: ported 'file widget to
	gtk-file-chooser-button

	* lisp/sawfish/gtk/widgets/image.jl: improved 'image widget

	* lisp/Makefile.in: don't install wallpaper.jlc (breaks 'image and
	'file widgets (...))

	* lisp/sawfish/wm/ext/wallpaper.jl: added integration of wallpaper