@@ -6,6 +6,9 @@
 	* lisp/sawfish/cfg/widgets/keymaps.jl
 	* lisp/sawfish/cfg/widgets/match-windows.jl: updated for above change
 
+	* lisp/sawfish/cfg/Makefile
+	* lisp/sawfish/cfg/widgets/icon.jl: removed unused, dummy 'icon widget
+
 2011-06-04  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* configure.in: bump minimum librep to 0.92.1, new funcs required by
 	SawfishConfig
